<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/pocemonlogo"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/enterLogin"
        android:padding="10dp" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/enterPassword"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/photopokemonsrandom"
        android:layout_width="165dp"
        android:layout_height="163dp"
        android:src="@drawable/photo2" />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="login"
        android:layout_gravity="center"
        android:id="@+id/loginBTN"
        android:background="@drawable/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/enter"
        android:textSize="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="registration"
        android:layout_gravity="center"
        android:id="@+id/registerBTN"
        android:background="@drawable/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="@string/registration"
        android:textSize="16dp"/>


</LinearLayout>