<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SearchPokemonActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/pocemonlogo"/>

    <EditText
        android:background="@drawable/background_edittext"
        android:layout_gravity="center"
        android:id="@+id/searchPokemon"
        android:padding="10dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/EnterNameOrId" />

    <ImageView
        android:layout_marginTop="-25dp"
        android:layout_gravity="center"
        android:id="@+id/imagePokemon"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:visibility="invisible"
        android:padding="15dp"
        android:background="@drawable/result"
        android:layout_gravity="center"
        android:id="@+id/result"
        android:textColor="@color/black"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:id="@+id/button_search"
        android:layout_width="200dp"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:id="@+id/button_search_history"
        android:layout_width="200dp"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/SearchHistory" />

</LinearLayout>